--- a/template/default/wap/list_partner.html
+++ b/template/default/wap/list_partner.html
@@ -152,12 +152,12 @@
                 
             <div  >
                 <ul>
-                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr3.png" alt="我们的品牌 四济堂"></div> </li>
+                  <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr7.png" alt="我们的品牌 亿霖"></div> </li>
+                  <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr2.png" alt="我们的品牌 新滑"></div> </li>
                     <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr6.png" alt="我们的品牌 速靓"></div> </li>
-                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr7.png" alt="我们的品牌 亿霖"></div> </li>
-                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr8.png" alt="我们的品牌 云之水"></div> </li>
-                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr9.png" alt="我们的品牌 老边家"></div> </li>
-                </ul>
+                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr10.png" alt="我们的品牌 瞙焱"></div> </li>
+                    <li> <div class="imgauto"><img src="__PUBLIC__/img/sample/tr3.png" alt="我们的品牌 四济堂"></div> </li>
+              </ul>
             </div>
         </div>
     </div>
