--- a/template/default/wap/show_case.html
+++ b/template/default/wap/show_case.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="__PUBLIC__/js/jquery-1.12.4.min.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/yunu.css">
     <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1859354_g9y7caq0nmu.css">
     <script type="text/javascript" src="__PUBLIC__/js/yunu.js"></script>
     <script type="text/javascript" src="__PUBLIC__/js/Superslide.js"></script>
     <script type="text/javascript" src="__PUBLIC__/js/swiper.min.js"></script>
