--- a/template/default/wap/public_header.html
+++ b/template/default/wap/public_header.html
@@ -53,7 +53,7 @@
             $("#app_menu li").eq(1).addClass('on').append(icon);
             $("#app_menu li").eq(2).addClass('on').append(icon);
             $("#app_menu li").eq(3).addClass('on').append(icon);
-            $("#app_menu li").eq(5).addClass('on').append(icon);
+            //$("#app_menu li").eq(5).addClass('on').append(icon);
 
             $("#app_menu li").click(function(){
                 $(this).toggleClass("active").siblings('#app_menu li').removeClass("active");//切换图标
