--- a/template/default/wap/show_product.html
+++ b/template/default/wap/show_product.html
@@ -23,7 +23,7 @@
 </head>
 <body class="page-product-detail">
     <include file="public:header" />
-    <div style="visibility:hidden;height:70px"><img src="<yunu:config name='site_logo'>"> </div>
+    <div class="hiddenlogo" style="visibility:hidden;height:70px; "><img src="<yunu:config name='site_logo'>" style="width: 100%;"> </div>
     <div class="search  sea">
         <form action="<yunu:url name='search'/>" method="post">
           <input class=" sea1" type="text" name="key" placeholder="请输入产品名称">
