--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -2538,8 +2538,12 @@ body {
 .pro_list ul li a .imgauto {
   width: 100%;
   height: 203px;
+  text-align: center;
 }
-
+.pro_list ul li a .imgauto img{
+  height: 100%;
+  width: auto;
+}
 .pro_list ul li a span {
   display: block;
   margin-top: 6px;
