--- a/template/default/index/index_index.html
+++ b/template/default/index/index_index.html
@@ -278,7 +278,7 @@
             <img src="__PUBLIC__/img/sample/news1.jpg" alt="">
             <!-- <img src="" alt="" style="width:100%;">   -->
           </div>
-          <yunu:list cid="28" limit="1" top="1">
+          <yunu:list cid="88" limit="1" top="1">
           <div style="top:176px;width:980px;">
             <a href="{$list.url}">
               <div class="fl f16" style="color:#fff; ">{$list.title} </div>
@@ -302,23 +302,30 @@
             <img src="__PUBLIC__/img/sample/news2.jpg" alt="">
             <!-- <img src="uploadfile/image/20170721/20170721152314_82224.jpg" alt="" style="width:100%;">   -->
           </div>
+          <yunu:list cid="89" limit="1" top="1">
           <div style="top:176px;width:980px;">
-            <a href="index.php?p=news_show&amp;id=24&amp;c_id=1&amp;lanmu=1">
-              <div class="fl" style="font-size:16px;color:#fff;width:;">多部门《关于印发推进药品价格改革意见的通知》 药品最高零售价即将取消</div>
+            <a href="{$list.url}">
+              <div class="fl f16" style="color:#fff; ">{$list.title} </div>
             </a>
-            <div class="fr" style="position: relative;">
-            </div>
+            <div class="fr f16" style="position: relative;color:#fff;">
+              {$list.create_time|date='m-d',###}
+
+             </div>
+            <div class="cl"></div>
 
           </div>
 
-          <a href="index.php?p=news_show&amp;id=24&amp;c_id=1&amp;lanmu=1">
+          <a href="{$list.url}">
             <div style="top:220px;font-size:14px;color:#fff;line-height:35px;text-indent:2em">
-              自去年10月，国家发改委发布征求药品价格放开的意见，不过后来随着价格司多位高官落马和改革后卫计委、人保部职责如何分配，一时没了下文。不过最近坊间流传多部门酝酿的《关于印发推进药品价格改革意见的通知》，自2015年7月1日起，除麻醉和一类精神药品外，取消原政府制定的药品价格。并基本上确定了以医保...</div>
+              {$list.content|str2sub=160, true}
+            </div>
           </a>
+        </yunu:list>
+
         </div>
       </div>
       <div class="index_news_list list1 clearfix">
-        <yunu:list cid="28" limit="3" flag="1">
+        <yunu:list cid="88" limit="3" flag="1">
 
           <div class="index_news_list_tem pt15">
             <div class="fl">
