--- a/template/default/index/list_product.html
+++ b/template/default/index/list_product.html
@@ -67,7 +67,7 @@
                             <li>
                                 <div class="mian_pr_tem fl" style="margin-bottom:50px">
                                     <div style="height:30px;"></div>
-                                    <div class="prroduct-title ellipsis tac" style="height:70px;line-height:70px;font-size:22px;color:#221813;padding:0 12px;" class="tc">
+                                    <div class="prroduct-title ellipsis tac" style="height:70px;line-height:70px;font-size:22px;color:#221813;padding:0 18px;" class="tc">
                                         {$list.title}
                                     </div>
                                     <div class="mian_pr_tem_img tc">
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="mian_pr_tem2">
                                         <div style="height:180px;"></div>
-                                        <div style="width:200px;margin:0 auto;color:#fff;font-size:20px">
+                                        <div class="tac" style="width:200px;margin:0 auto;color:#fff;font-size:20px">
                                             {$list.subtitle}
                                         </div>
                                         <div style="height:30px"></div>
