--- a/template/default/wap/css/ylyy.css
+++ b/template/default/wap/css/ylyy.css
@@ -5,6 +5,9 @@ html {
 .fc {
   color: #ae3523 !important;
 }
+.hiddenlogo img{
+  width: 100%;
+}
 .m_banner .mbanner .pagination {
   position: absolute;
   left: 0;
@@ -77,14 +80,14 @@ background-size:contain;
 /* 首页产品搜索 */
 .sea1 {
   width: 84%;
-  padding: 2%;
+  padding: 1%;
   background: #fff;
   font-size: 16px;
   border-radius: 0.2em;
   border: 0;
 }
 .sea {
-  padding: 3%;
+  padding: 2%;
   background: #ff9600;
 }
 /* 城市分站 */
@@ -115,11 +118,13 @@ background-size:contain;
 }
 
 .index_more {
-  width: 30%;
-  border: 1px solid #ccc;
-  color: #000;
+  
+  color: #666666;
   line-height: 35px;
   margin: 0 auto;
+}
+.index_more div{
+  display:inline-block;padding:0.02rem 0.06rem; border: 1px solid #666666;
 }
 
 .index_new {
@@ -348,7 +353,7 @@ background-size:contain;
 }
 
 .picScroll .swiper-container{
-  padding: 12px 0 24px ;
+  padding: 12px 0 34px ;
 }
 .picScroll .swiper-container .swiper-pagination{
   bottom: 0;
@@ -667,9 +672,9 @@ background-size:contain;
 }
 
 .pages .pagination button {
-  padding: 0 0.2em;
-  width: 3.2em;
-  height: 3.2em;
+  padding: 0 0.6em;
+  width:4em;
+  height: 4em;
   border-radius: 100%;
   float: none;
   display: inline-block;
