--- a/template/default/index/public_footer.html
+++ b/template/default/index/public_footer.html
@@ -31,7 +31,7 @@
           <section class="col col2">
             <h1>联系我们</h1>
             <p><span class="icon icon1">地址：</span><span><yunu:block name='dizhi' /></span></p>
-            <p><span class="icon icon2">电话：</span><span >024-</span><span ><yunu:block name='dianhua' /></span></p>
+            <p><span class="icon icon2">电话：</span><span ></span><span ><yunu:block name='dianhua' /></span></p>
             <p><span class="icon icon2">手机：</span><yunu:block name='shouji' /></span></p>
             <p><span class="icon icon3">邮箱：</span><span><yunu:block name='email' /></span></p>
           </section>
@@ -90,7 +90,7 @@
               <span>二维码</span>
             </div>
             <div class="text">
-              <yunu:block name='ewm' />
+              <yunu:block name='wxewm' />
             </div>
           </li>
           <li class="btntop">
