--- a/template/default/wap/public_header.html
+++ b/template/default/wap/public_header.html
@@ -6,6 +6,9 @@
         $('.closed').click(function(){
             $('.iet').hide();
         })
+
+        SITE_URL = "<yunu:url name='home'/>";
+        SITE_TITLE = "<yunu:config name='site_title'>";
     </script>
 
 
