--- a/template/default/wap/css/ylyy.css
+++ b/template/default/wap/css/ylyy.css
@@ -501,13 +501,13 @@ background-size:contain;
 
 /* 移动端 头部汉堡菜单 */
 .hamburger.navbar-toggle {
-  position: relative;
-    float: right;
+  position: absolute;
+    right: 0;
     border-radius: 3px;
     height: 66px;
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: 15px;
+    margin-right: 10px;
     line-height: 22px;
     background: 0 0!important;
     border: 1px solid transparent;
@@ -1014,3 +1014,24 @@ background-size:contain;
     width: 100%;
   }
 }
+
+/*share css style*/
+#mobile_share{position:fixed;right:0;bottom:90px;
+  width: 123px;z-index: 99999;background: #fff;padding: 0;overflow: hidden;-webkit-transition: all 0.3s ease-in-out;  transition: all 0.3s ease-in-out;-webkit-transform: translateX(100%);}
+  #mobile_share h2.title{text-align:center;line-height:30px;height:30px;background: #717577;color: #fff;font-size:14px;}
+  #mobile_share .share_item{padding: 8px;background: #fff;border: 1px solid #f1f1f1;}
+  #mobile_share .share_item li{display: block;overflow:hidden;margin: 8px 0;border-bottom: 1px solid #f1f1f1;padding-bottom: 8px;}
+  .share-link {display: block;margin:0 auto;width: 105px;overflow: hidden;line-height: 32px;font-size: 12px;padding-left: inherit;}
+  .share-link i{background: url(../img/share_icon.png) no-repeat;background-size: 200px 32px;width:32px;height:32px;display: block;margin-right: 20px;float: left;}
+  .share-link span{display:inline-block;}
+  .share-weibo i{background-position:0 0;}
+  .share-renren i{background-position:-42px 0;}
+  .share-douban i{background-position:-84px 0;}
+  .share-qweibo i{background-position:-126px 0;}
+  .share-qzone i{background-position:-168px 0;}
+  .share-weixin {display: block;margin:0 auto;width: 105px;overflow: hidden;line-height: 32px;font-size: 12px;padding-left: inherit;}
+  .share-weixin i{background:url(../img/share_icon2.png) no-repeat;background-size:32px 32px;
+    width:32px;height:32px;display: block;margin-right: 20px;float: left;}
+  .share-weixin span{display:inline-block;}
+
+  .contact-ewm img{ width: 45%;     vertical-align: top;}
